--- a/JavaWeb-exAvaliacao/WebContent/WEB-INF/web.xml
+++ b/JavaWeb-exAvaliacao/WebContent/WEB-INF/web.xml
@@ -30,6 +30,10 @@ http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 		<param-name>javax.faces.PARTIAL_STATE_SAVING</param-name>
 		<param-value>false</param-value>
 	</context-param>
+	<context-param>
+		<param-name>javax.faces.DATETIMECONVERTER_DEFAULT_TIMEZONE_IS_SYSTEM_TIMEZONE</param-name>
+		<param-value>true</param-value>
+	</context-param>
 
 
 </web-app>
