--- a/JavaWeb-exAvaliacao/WebContent/WEB-INF/web.xml
+++ b/JavaWeb-exAvaliacao/WebContent/WEB-INF/web.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xmlns="http://java.sun.com/xml/ns/javaee"
-	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee 
-http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 	id="WebApp_ID" version="3.0">
 	<display-name>JavaWeb-exAvaliacao</display-name>
 	<welcome-file-list>
@@ -34,6 +33,30 @@ http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 		<param-name>javax.faces.DATETIMECONVERTER_DEFAULT_TIMEZONE_IS_SYSTEM_TIMEZONE</param-name>
 		<param-value>true</param-value>
 	</context-param>
-
-
+	<filter>
+		<filter-name>AdminFilter</filter-name>
+		<filter-class>br.com.fiap.filter.AdminFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>AdminFilter</filter-name>
+		<url-pattern>/faces/admin/*</url-pattern>
+		<url-pattern>/faces/cadastro/*</url-pattern>
+		<url-pattern>/faces/lista/*</url-pattern>
+	</filter-mapping>
+	<filter>
+		<filter-name>AlunoFilter</filter-name>
+		<filter-class>br.com.fiap.filter.AlunoFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>AlunoFilter</filter-name>
+		<url-pattern>/faces/aluno/*</url-pattern>
+	</filter-mapping>
+	<filter>
+		<filter-name>ProfessorFilter</filter-name>
+		<filter-class>br.com.fiap.filter.ProfessorFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>ProfessorFilter</filter-name>
+		<url-pattern>/faces/professor/*</url-pattern>
+	</filter-mapping>
 </web-app>
